# xonai

./: .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  PROTOCOL.md  README.md  impl.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: debug.yml  lint-and-test.yml  publish.yml  release.yml  simple-test.yml  test-minimal.yml  test.yml
manual_tests/: test_debug_override.xsh  test_error_elimination.xsh  test_full_functionality.xsh  test_simple_query.xsh  test_xoncc_live.xsh
tests/: README.md  conftest.py  dummy_claude.py  setup_test_env.py  test_claude_cli_integration.py  test_formatters_realtime.py  test_formatters_tools.py  test_integration.py  test_interactive_simulation.py  test_setup_claude.py  test_xoncc_minimal.py  test_xoncc_simple.py
tests/dummy_claude/: __init__.py  conftest.py  dummy_claude.py  setup_test_env.py  test_claude_cli_integration.py  test_xoncc_minimal.py  test_xoncc_simple.py
tests/integration/: __init__.py  test_ai_response.py  test_complex_queries.py  test_integration.py  test_mock_claude_integration.py  test_xoncc_formatters_integration.py
tests/interactive/: __init__.py  test_claude_cli_expect.exp  test_interactive_expect.exp  test_interactive_simulation.py  test_xonai_manual.py  test_xonai_practical.py  test_xonai_real.py  test_xonai_simple.py  test_xonai_simple_with_path.py  test_xoncc_manual.py  test_xoncc_practical.py
tests/unit/: __init__.py  conftest.py  test_cc_command.py  test_check_claude.py  test_claude_json_patterns.py  test_display.py  test_display_coverage.py  test_display_edge_cases.py  test_formatters_log.py  test_handler.py  test_init_coverage.py  test_main.py  test_setup_claude.py  test_subprocess_handling.py  test_xonai_deadlock.py  test_xontrib.py
xonai/: __init__.py  display.py  handler.py  xonai  xonai.py  xontrib.py
xonai/agents/: base.py  claude.py  dummy.py
xonai/ai/: __init__.py  base.py  claude.py  dummy.py
xoncc/: __init__.py  cc.py  cc.sh  check_claude.py  claude_json_formatter.py  main.py  realtime_json_formatter.py  setup_claude.py  xoncc  xontrib.py
xoncc/claude/: __init__.py  check.py  cli.py
xoncc/formatters/: __init__.py  log.py  realtime.py  tools.py
xontrib/: xoncc.py  xoncc_v2.py
