[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xonai"
version = "0.1.0"
description = "AI integration for xonsh shell - Natural language command interpretation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "jin0g", email = "xonai@example.com"},
]
keywords = ["xonsh", "xontrib", "claude", "ai", "shell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "xonsh>=0.13.0",
    "rich>=13.0.0"
]

[project.scripts]
xonai = "xonai.xonai:main"

[project.entry-points."xonsh.xontribs"]
xonai = "xonai.xontrib"

[project.urls]
Homepage = "https://github.com/jin0g/xonai"
Documentation = "https://github.com/jin0g/xonai#readme"
Repository = "https://github.com/jin0g/xonai"
Issues = "https://github.com/jin0g/xonai/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pexpect>=4.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-ruff>=0.1.0",
    "pytest-mypy>=0.10.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
    "pexpect>=4.8.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[tool.setuptools]
packages = ["xonai", "xonai.ai"]
include-package-data = true

[tool.setuptools.package-data]
xonai = ["*.py", "ai/*.py"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["xonai"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "claude_cli: tests that require Claude CLI to be installed and configured",
    "integration: integration tests that may take longer to run",
    "slow: slow running tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=xonai",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = ["xonai"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
